Changes from Views service

--- a/Ranjan/.app.json
+++ b/Ranjan/.app.json
@@ -15,5 +15,8 @@
   "navigation": "tabstrip",
   "view": "home",
   "transition": "slide",
-  "skin": "native"
+  "skin": "flat",
+  "skinActive": "#10c4b2",
+  "skinText": "#4c5356",
+  "skinSecondary": "#ffffff"
 }
