--- a/Ranjan/.app.json
+++ b/Ranjan/.app.json
@@ -37,9 +37,8 @@
   ],
   "dataProviders": [],
   "name": "kendoUiMobileApp",
-  "navigation": "tabstrip",
-  "view": "home",
-  "transition": "slide",
+  "navigation": "listmenu",
+  "transition": "fade",
   "skin": "nova",
   "skinActive": "#ff4350",
   "skinText": "#32364c",
