Changes from Views service

--- a/Ranjan/.app.json
+++ b/Ranjan/.app.json
@@ -38,7 +38,7 @@
   "dataProviders": [],
   "name": "kendoUiMobileApp",
   "navigation": "listmenu",
-  "transition": "fade",
+  "transition": "slide",
   "skin": "nova",
   "skinActive": "#ff4350",
   "skinText": "#32364c",
