--- a/Ranjan/.app.json
+++ b/Ranjan/.app.json
@@ -51,6 +51,13 @@
       "source": "everlive",
       "everliveKey": "gsdcgidndquozk94",
       "offlineStorage": true
+    },
+    {
+      "type": "kendo-ui-mobile:dataProvider",
+      "name": "jsonDataProvider",
+      "title": "JSON Data Service",
+      "source": "json",
+      "url": "https://"
     }
   ],
   "name": "kendoUiMobileApp",
